# rupay-backend

./: .gitignore  LICENSE  Pipfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  sql_app.sqlite
app/: crud.py  database.py  email_service.py  main.py  models.py  schemas.py
app/controllers/: auth_controller.py  comment_controller.py  payment_controller.py  user_controller.py
app/database/: init.py  models.py  schemas.py
app/middlewares/: authentication_middleware.py
app/services/: access_service.py  auth_service.py  comments_service.py  email_service.py  payment_service.py  user_service.py
database/: index.py
